# SemanPartmesh

./: .gitignore  build_complexity_map.py  extract_quad.py  install_env.sh  requirements.txt  run_baseline.sh  run_pipeline.py  run_pipeline_simplified.sh  visualize_feature_clusters.py
NeurCross/: environment.yml
NeurCross/data/doubleTorus/input/: doubleTorus.ply
NeurCross/models/: loss_quad_mesh.py
NeurCross/quad_mesh/: quad_mesh_args.py  train_quad_mesh.py
NeurCross/quad_mesh/doubleTorus/doubleTorus/save_crossField/: doubleTorus_iter_1000.txt  doubleTorus_iter_1500.txt  doubleTorus_iter_2000.txt  doubleTorus_iter_2500.txt  doubleTorus_iter_3000.txt  doubleTorus_iter_3500.txt  doubleTorus_iter_4000.txt  (+13 more)
NeurCross/utils/: semantic_utils.py  utils.py
PartField/lightning_logs/version_0/: hparams.yaml
PartField/lightning_logs/version_1/: hparams.yaml
eval/: __init__.py  angle_distortion.py  boundary_alignment.py  compare.py  evaluate.py  jacobian_ratio.py  label_utils.py  part_miou.py  run_compare_cheburashka.py  sweep_semantic_weight.py
instruction_guidance/: __init__.py  build_instruction_meta.py  metadata.py
output/: cheburashka_clusters.ply  cheburashka_complexity.ply  cheburashka_complexity_field_only.npz  cheburashka_complexity_field_only.ply  cheburashka_complexity_for_extract_summary.json  cheburashka_complexity_summary.json  cheburashka_density_hint.txt  cheburashka_quad_clusters.ply  cheburashka_size_hint.txt
output/cheburashka_complexity_components/: field.ply  geometry.ply  semantic.ply  size_hint_inverse.ply
pipeline_output/doubleTorus/partfield_features/: feat_pca_doubleTorus_0.ply  input_doubleTorus_0.ply
pipeline_output/doubleTorus260301/partfield_features/: feat_pca_doubleTorus_0.ply
pipeline_output/neurcross_logs/cheburashka/save_crossField/: cheburashka_iter_1000.txt  cheburashka_iter_1500.txt  cheburashka_iter_2000.txt  cheburashka_iter_2500.txt  cheburashka_iter_3000.txt  cheburashka_iter_3500.txt  cheburashka_iter_4000.txt  cheburashka_iter_4500.txt  cheburashka_iter_500.txt  cheburashka_iter_5000.txt  cheburashka_iter_5500.txt  cheburashka_iter_6000.txt  cheburashka_iter_6500.txt  cheburashka_iter_7000.txt  cheburashka_iter_7500.txt  cheburashka_iter_8000.txt  cheburashka_iter_8500.txt  cheburashka_iter_9000.txt  cheburashka_iter_9500.txt  cheburashka_iter_9999.txt
pipeline_output/partfield_features/: feat_pca_armadillo_0.ply  feat_pca_cheburashka_0.ply  input_armadillo_0.ply  input_cheburashka_0.ply
quad_extract/: CMakeLists.txt  extract_quad_mesh.cpp
(+26 files in other folders)
